specs/stage/web/gateway/private-gateway/private-gateway.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: private-gateway
  namespace: ilink
  labels:
    app: private-gateway
spec:
  ports:
    - name: http
      port: 3000
      targetPort: http
  selector:
    app: private-gateway
