specs/stage/web/gateway/private-gateway/private-gateway.gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: private-gateway
  namespace: ilink
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: private-gateway-ilink-tls
      hosts:
        - 'private-gateway.ilink.pw'
