specs/stage/web/gateway/private-gateway/private-gateway.virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: private-gateway
  namespace: ilink
spec:
  hosts:
    - 'private-gateway.ilink.pw'
  gateways:
    - private-gateway
  http:
    - route:
        - destination:
            host: private-gateway
            port:
              number: 3000
